--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".ActivitySignIn"></activity>
+        <activity android:name=".ActivityHome"></activity>
+        <activity android:name=".ActivitySignIn" />
         <activity android:name=".ActivitySignUp" />
         <activity android:name=".ActivityWelcomeScreen">
             <intent-filter>
