populate data from database to spinner in activity sign up and create new package (activity package) in main package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@drawable/application_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".ActivityTermsAndCondition"></activity>
-        <activity android:name=".ActivityHome" />
-        <activity android:name=".ActivitySignUp" />
-        <activity android:name=".ActivitySignIn" />
-        <activity android:name=".ActivityWelcomeScreen">
+        <activity android:name=".activity.ActivityTermsAndCondition"></activity>
+        <activity android:name=".activity.ActivityHome" />
+        <activity android:name=".activity.ActivitySignUp" />
+        <activity android:name=".activity.ActivitySignIn" />
+        <activity android:name=".activity.ActivityWelcomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
